RESOLVED FIXED94983
[Chromium] Stop texture updates when context is lost.
https://bugs.webkit.org/show_bug.cgi?id=94983
Summary [Chromium] Stop texture updates when context is lost.
David Reveman
Reported 2012-08-24 17:03:02 PDT
Stop texture uploads when context is lost rather than relying on the throttled texture uploader to still make progress with a lost context.
Attachments
Patch (1.96 KB, patch)
2012-08-24 17:07 PDT, David Reveman
no flags
Patch (8.17 KB, patch)
2012-08-26 14:37 PDT, David Reveman
no flags
Patch (8.21 KB, patch)
2012-08-27 11:35 PDT, David Reveman
no flags
Patch (8.09 KB, patch)
2012-08-27 15:07 PDT, David Reveman
no flags
David Reveman
Comment 1 2012-08-24 17:07:42 PDT
Created attachment 160525 [details] Patch Work in progress. Needs a unit test.
Antoine Labour
Comment 2 2012-08-24 17:19:58 PDT
Comment on attachment 160525 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=160525&action=review > Source/WebCore/platform/graphics/chromium/cc/CCThreadProxy.cpp:-623 > - ASSERT(!m_currentTextureUpdateControllerOnImplThread->hasMoreUpdates()); Maybe you can replace those 2 with ASSERT(!hasMoreResourceUpdates()) which should work with either case?
David Reveman
Comment 3 2012-08-26 14:37:13 PDT
Created attachment 160616 [details] Patch Add unit test and ASSERT
James Robinson
Comment 4 2012-08-27 11:10:42 PDT
Comment on attachment 160616 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=160616&action=review > Source/WebKit/chromium/ChangeLog:10 > + (WTF::CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::create): the anonymous namespace for tests confuses the ChangeLog script - could you delete the WTF::s before landing?
David Reveman
Comment 5 2012-08-27 11:35:55 PDT
Created attachment 160760 [details] Patch Remove WTF::
WebKit Review Bot
Comment 6 2012-08-27 14:58:35 PDT
Comment on attachment 160760 [details] Patch Rejecting attachment 160760 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: Kit/chromium/third_party/yasm/source/patched-yasm --revision 134927 --non-interactive --force --accept theirs-conflict --ignore-externals' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' 50>At revision 134927. ________ running '/usr/bin/python tools/clang/scripts/update.py --mac-only' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output: http://queues.webkit.org/results/13639019
David Reveman
Comment 7 2012-08-27 15:07:34 PDT
Created attachment 160819 [details] Patch fix changelog
WebKit Review Bot
Comment 8 2012-08-27 18:59:52 PDT
Comment on attachment 160819 [details] Patch Clearing flags on attachment: 160819 Committed r126835: <http://trac.webkit.org/changeset/126835>
WebKit Review Bot
Comment 9 2012-08-27 18:59:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.