[Chromium] Stop texture updates when context is lost. https://bugs.webkit.org/show_bug.cgi?id=94983

Patch by David Reveman <reveman@chromium.org> on 2012-08-27
Reviewed by James Robinson.

Source/WebCore:

Free m_currentTextureUpdateController when
CCThreadProxy::didLoseContextOnImplThread() is called.

Unit test: CCLayerTreeHostTestLostContextWhileUpdatingResources.runMultiThread

* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::didLoseContextOnImplThread):
(WebCore::CCThreadProxy::scheduledActionCommit):

Source/WebKit/chromium:

* tests/CCLayerTreeHostTest.cpp:
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext):
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::create):
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::setContextLostCallback):
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::isContextLost):
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::beginQueryEXT):
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::endQueryEXT):
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::getQueryObjectuivEXT):
(CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext::CompositorFakeWebGraphicsContext3DWithEndQueryCausingLostContext):
(CCLayerTreeHostTestLostContextWhileUpdatingResources):
(CCLayerTreeHostTestLostContextWhileUpdatingResources::CCLayerTreeHostTestLostContextWhileUpdatingResources):
(CCLayerTreeHostTestLostContextWhileUpdatingResources::createOutputSurface):
(CCLayerTreeHostTestLostContextWhileUpdatingResources::beginTest):
(CCLayerTreeHostTestLostContextWhileUpdatingResources::commitCompleteOnCCThread):
(CCLayerTreeHostTestLostContextWhileUpdatingResources::layout):
(CCLayerTreeHostTestLostContextWhileUpdatingResources::afterTest):
(TEST_F):

Canonical link: https://commits.webkit.org/113012@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126835 268f45cc-cd09-0410-ab3c-d52691b4dbfc